basic docs template

--- a/docstemplate/layout.tmpl
+++ b/docstemplate/layout.tmpl
@@ -21,40 +21,13 @@
 
 <div id="main">
 
-    <h1 class="page-title">Home</h1>
+    <h1 class="page-title"><?js= title ?></h1>
 
-    
-
-
-
-    
-
-
-    <h3> </h3>
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
+    <?js= content ?>
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Classes</h3><ul><li><a href="Maned.html">Maned</a></li></ul><h3>Global</h3><ul><li><a href="global.html#CTX">CTX</a></li></ul>
+    <?js= this.nav ?>
 </nav>
 
 <br class="clear">
