--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -568,6 +568,23 @@ body {
   color: #333;
 }
 
+.example__image {
+  display: inline-block;
+  vertical-align: top;
+  width: 300px;
+  margin-right: 15px;
+}
+
+.example__content {
+  display: inline-block;
+  vertical-align: top;
+  width: 500px;
+}
+
+.link {
+  color: #0278c0;
+}
+
 .footer {
   text-align: center;
   padding: 30px 0 50px;
